[gd_scene load_steps=3 format=3 uid="uid://dbu7cb0h10jdt"]

[ext_resource type="PackedScene" uid="uid://dbh6jrpcqwj76" path="res://ui/tooltip_component/tooltip/tooltip.tscn" id="1_2rq01"]
[ext_resource type="Script" path="res://ui/tooltip_component/tooltip_overlay/tooltip_overlay.gd" id="1_15nst"]

[node name="TooltipOverlay" type="CanvasLayer"]
layer = 5
script = ExtResource("1_15nst")

[node name="LayoutWrapper" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -401.0
offset_top = -101.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="TooltipContainer" type="VBoxContainer" parent="LayoutWrapper"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="MainTooltip" parent="LayoutWrapper/TooltipContainer" instance=ExtResource("1_2rq01")]
unique_name_in_owner = true
layout_mode = 2

[node name="TooltipLoadingBar" type="ProgressBar" parent="LayoutWrapper/TooltipContainer/MainTooltip"]
unique_name_in_owner = true
visible = false
layout_mode = 2
show_percentage = false
